SIRP-3034 fix sepa report dialog and sepa visible

--- a/bfg-main/bfg-ui/src/app/features/sepa-dashboard/transactions-with-value/transactions-with-value/transactions-with-value-reports-dialog/transactions-with-value-reports-dialog.component.scss
+++ b/bfg-main/bfg-ui/src/app/features/sepa-dashboard/transactions-with-value/transactions-with-value/transactions-with-value-reports-dialog/transactions-with-value-reports-dialog.component.scss
@@ -3,12 +3,10 @@
 
     .header {
         display: flex;
-        margin: -24px -24px -14px -24px !important;
-        padding: 24px 24px;
-        word-break: break-all;
+        justify-content: space-between;
 
         .dialog-title {
-            margin: 0 !important;
+            margin: 0;
         }
 
         .close-icon {
